--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3DB4F2" />
-    <meta name="description" content="Show off your anime list with a touch of eye candy" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Anime Stats</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/pple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
+    <meta name="theme-color" content="#3DB4F2">
 
+    <!-- Primary Meta Tags -->
+    <title>Anime Tracker</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="title" content="Anime Tracker">
+    <meta name="description" content="Show off your anime list with a touch of eye candy">
+    <meta name=”robots” content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://anime.thelonelylands.com/">
+    <meta property="og:title" content="Anime Tracker">
+    <meta property="og:description" content="Show off your anime list with a touch of eye candy">
+    <meta property="og:image" content="%PUBLIC_URL%/android-chrome-512x512.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://anime.thelonelylands.com/">
+    <meta property="twitter:title" content="Anime Tracker">
+    <meta property="twitter:description" content="Show off your anime list with a touch of eye candy">
+    <meta property="twitter:image" content="%PUBLIC_URL%/android-chrome-512x512.png">
+
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet"> 
-  
   </head>
 
-  <body>
+  <body style="background-color: #0B1622">
     <noscript>JS is needed mate</noscript>
     <div id="root"></div>
   </body>
