ganalytics / stats no data crash / name change to anitracker

--- a/public/index.html
+++ b/public/index.html
@@ -12,30 +12,38 @@
     <meta name="theme-color" content="#3DB4F2">
 
     <!-- Primary Meta Tags -->
-    <title>Anime Tracker</title>
+    <title>AniTracker</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="title" content="Anime Tracker">
+    <meta name="title" content="AniTracker">
     <meta name="description" content="Show off your anime list with a touch of eye candy">
     <meta name=”robots” content="index, follow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://anime.thelonelylands.com/">
-    <meta property="og:title" content="Anime Tracker">
+    <meta property="og:url" content="%PUBLIC_URL%">
+    <meta property="og:title" content="AniTracker">
     <meta property="og:description" content="Show off your anime list with a touch of eye candy">
     <meta property="og:image" content="%PUBLIC_URL%/android-chrome-512x512.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://anime.thelonelylands.com/">
-    <meta property="twitter:title" content="Anime Tracker">
+    <meta property="twitter:url" content="%PUBLIC_URL%">
+    <meta property="twitter:title" content="AniTracker">
     <meta property="twitter:description" content="Show off your anime list with a touch of eye candy">
     <meta property="twitter:image" content="%PUBLIC_URL%/android-chrome-512x512.png">
-
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet"> 
+  
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YRQZSVXSL0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-YRQZSVXSL0');
+    </script>
   </head>
 
   <body style="background-color: #0B1622">
